fix wrapping text on send items

--- a/apps/desktop/src/scss/list.scss
+++ b/apps/desktop/src/scss/list.scss
@@ -125,6 +125,7 @@
       display: block;
       overflow-x: hidden;
       text-overflow: ellipsis;
+      white-space: nowrap;
       .title-badges {
         @include themify($themes) {
           color: themed("mutedColor");
